src/adapters/github.less
.octotree-sidebar.octotree-github-sidebar {
  background-color: #f7f7f7;
  border-right: 1px solid #ddd;
  border-right: none;
  bottom: 0;
  box-sizing: border-box;
  left: 0;
  overflow: visible;
  padding-top: 60px;
  padding-bottom: 32px;
  position: fixed !important;
  right: 0;
  top: 0;
  transform: translate3d(-100%, 0, 0);
  transition: transform 0.2s ease;
  z-index: 1000000001;

  // jQuery resizer
  .ui-resizable-e {
    bottom: 0;
    cursor: col-resize;
    position: absolute;
    right: -4px;
    top: 0;
    width: 8px;
  }

  .octotree_bottom {
    border-right: 1px solid #dfe2e5;
    background-color: #efefef;
    bottom: 0;
    color: @gray;
    font-size: 11px;
    height: 32px;
    padding-left: 5px;
    padding-top: 10px;
    position: absolute;
    width: 100%;

    a {
      color: @gray;
      &:hover {
        color: @blue;
        text-decoration: none;
        i:before {
          color: @blue;
        }
      }

      .octotree-icon-github {
        .icon-v2(@octicons-mark-github, @font-size: 13px, @color: @gray, @hover-color: @blue);
        top: 1px;
        margin-right: 3px;
      }
    }
  }

  .octotree_views {
    height: 100%;
    overflow: auto;
    box-sizing: border-box;
    border-right: 1px solid #dfe2e5;
    background-color: #f8f9f9;

    .octotree_view {
      display: none;
      box-sizing: border-box;
      color: #0f2e47;

      &.current {
        display: block;
      }

      input[type='text'],
      textarea {
        padding: 4px 8px;
        color: #24292e;
        background-color: #fafbfc;
        border: 1px solid #d1d5da;
        border-radius: 3px;
        outline: none;
        box-shadow: rgba(27, 31, 35, 0.075) 0px 1px 2px inset;

        &:focus {
          border-color: #2188ff;
          box-shadow: inset 0 1px 2px rgba(27, 31, 35, 0.075), 0 0 0 0.2em rgba(3, 102, 214, 0.3);
        }
      }

      textarea {
        padding: 6px 8px;
      }

      .octotree_view_header {
        background-color: @dark-v2;
        border-right: 1px @dark solid;
        color: white;
        font-size: 16px;
        font-weight: normal;
        height: 60px;
        left: 0;
        line-height: 2.8;
        margin: 0;
        overflow: hidden;
        padding-right: 65px;
        padding-top: 2px;
        position: absolute;
        text-overflow: ellipsis;
        text-shadow: 0 1px 0 #fff;
        text-shadow: none;
        top: 0;
        white-space: nowrap;
        width: 100%;
        z-index: 1000002;
      }

      .octotree_help {
        outline: 0;
        cursor: pointer;
        text-decoration: none;
      }
    }

    .octotree_treeview {
      .octotree_view_header {
        padding-left: 13px;
        box-sizing: border-box;

        .octotree_header_repo,
        .octotree_header_branch {
          width: 100%;
          overflow: hidden;
          white-space: nowrap;
          text-overflow: ellipsis;
          box-sizing: border-box;
        }

        .octotree_header_repo {
          font-size: 13px;
          font-weight: normal;
          color: white;

          &:before {
            color: #bbb;
            margin-right: 6px;
            line-height: 28px;
          }

          .octotree-icon-repo {
            .icon-v2(@octicons-repo, @color: white, @hover-color: white);
            top: 2px;
          }

          a {
            color: white;
            &:hover {
              color: white;
            }
          }
        }

        .octotree_header_branch {
          line-height: 1;
          margin-bottom: 5px;
          margin-left: -1px;
          margin-top: -6px;
          font-size: 11px;
          color: white;

          &:before {
            margin-right: 4px;
            margin-left: 3px;
          }

          .octotree-icon-branch {
            .icon-v2(@octicons-git-branch, @color: white, @hover-color: white);
            top: 2px;
            left: 2px;
          }
        }
      }

      .jstree-anchor {
        text-decoration: none;
        outline: none;
        padding-right: 0;
      }
      .jstree-anchor:hover {
        text-decoration: none !important;
      }
      .jstree-default {
        .jstree-wholerow {
          height: auto;
        }
        .jstree-node {
          line-height: 24px;
          margin-left: 12px;
        }
        .jstree-icon.jstree-ocl {
          margin-right: -6px;
          margin-top: -1px;
        }
      }

      .jstree-icon.tree,
      .jstree-icon.blob,
      .jstree-icon.commit {
        display: inline-block;
        margin-right: 3px;
        text-decoration: none;
        font-smoothing: antialiased;
      }
      .jstree-default .jstree-icon,
      .jstree-default .jstree-icon:empty,
      .jstree-default .jstree-anchor {
        line-height: 24px !important;
        font-style: normal;
      }

      .jstree-icon.tree,
      .jstree-icon.commit,
      .jstree-icon.file-generic {
        margin-top: 0;
        margin-right: 2px;
      }
      .jstree-icon.tree {
        .icon-v2(@octicons-file-directory, @color: #6cb5fe, @hover-color: #6cb5fe);
      }
      .jstree-icon.file-generic {
        .icon-v2(@octicons-file-text, @color: @gray, @hover-color: @gray);
      }
      .jstree-node.jstree-leaf:hover .jstree-icon.blob {
        .icon-v2(@octicons-link-external, @color: @accent, @hover-color: @accent, @font-size: 15px);
      }
      .jstree-icon.commit {
        .icon-v2(@octicons-file-submodule, @color: @gray, @hover-color: @gray);
      }
      .jstree-anchor {
        color: #0f2e47;
        & > span {
          color: #0f2e47;
        }
      }
      .jstree-default {
        .jstree-wholerow-hovered {
          background: #eee;
        }
        .jstree-wholerow-clicked {
          background: #dbeeff;
        }
      }

      .patch {
        display: none;
      }

      .patch:last-of-type {
        display: inline;
        font-size: 80%;
        span {
          padding-left: 5px;
        }
      }
    }

    .octotree_errorview {
      .octotree_view_header {
        padding-left: 5px;
        padding-top: 5px !important;
      }
      & > form {
        div {
          margin: 6px;
        }
        input {
          width: 100%;
        }
        .error {
          color: #900;
        }
        .button {
          margin-right: 5px;
        }
      }
    }

    .octotree_optsview {
      .octotree_view_header {
        padding-left: 5px;
        padding-top: 7px !important;
      }
      & > form {
        margin: 6px;
        & > div {
          padding-top: 5px;
          padding-bottom: 12px;
          a {
            display: inline-block;
            float: right;
          }
        }
        label {
          font-weight: normal !important;
        }
        label.disabled {
          color: gray;
        }
        input[type='text'],
        textarea {
          width: 100%;
        }
        textarea {
          resize: vertical;
          height: 60px;
        }
      }

      .octotree_opts_disclaimer {
        color: @gray;
        display: block;
        font-size: 12px;
        margin-left: 17px;
      }
    }
  }

  //
  // Common buttons
  //
  a.octotree_toggle,
  a.octotree_opts,
  a.octotree_pin,
  a.octotree_spin {
    position: absolute !important;
    text-align: center;
    line-height: 1;
    cursor: pointer;
    z-index: 1000003;

    & > span {
      line-height: 1;
      display: inline-block;
      text-decoration: none;
    }
  }

  a.octotree_toggle {
    top: 50%;
    right: -35px;
    color: black;
    width: 30px;
    height: 30px;
    padding: 6px 6px;

    &:hover,
    &.selected i:before {
      color: @blue;
    }

    & > span:after,
    &:hover > span:after {
      #octicons.chevron-right();
      font-size: 15px;
      position: relative;
      left: 3px;
    }

    &:hover > span:after {
      color: @blue;
    }

    .popup {
      position: absolute;
      left: 0;
      top: calc(~'100% + 2px');
      cursor: pointer;
      opacity: 0;
      z-index: 1000004;
      width: 260px;
      text-align: left;
      text-transform: none;
      background-color: #fff;
      background-clip: padding-box;
      border: 1px solid rgba(0, 0, 0, 0.15);
      border-radius: 5px;
      box-shadow: 0 3px 12px rgba(0, 0, 0, 0.25);
      white-space: normal;
      transition: opacity 0.3s linear;
      font-weight: 400;
      line-height: 20px;

      &:hover {
        color: black;
      }
      &.show {
        opacity: 1;
      }
      & > .arrow,
      & > .arrow:after {
        position: absolute;
        display: block;
        width: 0;
        height: 0;
        border-color: transparent;
        border-style: solid;
      }
      & > .arrow {
        left: 15px;
        top: -6px;
        border-width: 6px;
        margin-left: -6px;
        border-top-width: 0;
        border-bottom-color: rgba(0, 0, 0, 0.25);
      }
      & > .arrow:after {
        border-width: 5px;
        content: '';
        top: 1px;
        margin-left: -5px;
        border-top-width: 0;
        border-bottom-color: #fff;
      }
      & > .content {
        padding: 9px 14px;
        font-size: 13px;
      }
    }
  }

  a.octotree_pin {
    top: 21px;
    right: 12px;
    width: 16px;
    height: 16px;

    .octotree-icon-pin {
      .icon-v2(@octicons-pin, @font-size: 16px, @color: rgba(255, 255, 255, 0.65), @hover-color: white);
    }

    &.octotree_pinned .octotree-icon-pin:before {
      transform: rotate(-45deg);
      color: white;
    }
  }

  a.octotree_opts {
    top: 22px;
    right: 36px;
    width: 17px;
    height: 17px;

    .octotree-icon-settings {
      .icon-v2(@octicons-gear, @font-size: 17px, @color: rgba(255, 255, 255, 0.65), @hover-color: white);
      top: -1px;
    }

    &.selected .octotree-icon-settings:before {
      color: white;
    }
  }

  .octotree-icon-key {
    .icon-v2(@octicons-key);
  }

  .octotree-icon-help {
    .icon-v2(@octicons-question);
  }
}

//
// Sidebar showing styles
//
.octotree-show {
  .octotree-sidebar.octotree-github-sidebar {
    transform: translate3d(0, 0, 0);

    a.octotree_spin {
      right: 12px;
      top: 65px;

      &.octotree_loading {
        & > span:after {
          content: '';
        }

        .loader {
          border-radius: 50%;
          border: 2px solid @gray;
          border-top: 2px solid rgba(0, 0, 0, 0);
          border-left: 2px solid rgba(0, 0, 0, 0);
          width: 16px;
          height: 16px;
          animation: loading 0.5s infinite linear;
        }
      }

      @keyframes loading {
        0% {
          transform: rotate(0deg);
        }
        100% {
          transform: rotate(360deg);
        }
      }

      &:not(.octotree_loading) {
        visibility: hidden;
      }
    }
  }

  body.split-diff .container {
    padding-left: 0;
  }
}

//
// Print
//
@media print {
  .octotree-sidebar.octotree-github-sidebar {
    display: none;

    a.octotree_toggle {
      display: none;
    }
  }
}

